--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://fate-ui.github.io/WebglStudy/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
