--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: vite build
+        run: npm run build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
