--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Install pnpm
+        if: steps.changed-files.outputs.only_changed != 'true'
+        uses: pnpm/action-setup@v2.4.0
+
       - name: Setup Node
         uses: actions/setup-node@v3
 
