--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "homepage": "https://fate-ui.github.io/WebglStudy/",
+  "packageManager": "pnpm@8.6.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
