--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.9",
     "vite-plugin-glsl": "^1.1.2",
+    "vite-plugin-restart": "^0.3.1",
     "vue-ts": "^1.0.11"
   }
 }
