--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vite": "^4.4.9",
     "vite-plugin-glsl": "^1.1.2",
     "vite-plugin-restart": "^0.3.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-ts": "^1.0.11"
   }
 }
