--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "4.2.4"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.1.61",
     "@types/dat.gui": "^0.7.10",
     "@types/gsap": "^3.0.0",
     "@types/node": "^20.6.0",
