--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "prettier": "prettier --write .",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache",
-    "lint:fix": "pnpm run lint --fix"
+    "lint:fix": "eslint --ext .vue,.ts src/ --fix"
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
@@ -19,41 +19,41 @@
     "element-plus": "^2.3.14",
     "gsap": "^3.12.2",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "three": "0.158.0",
     "three-mesh-bvh": "0.6.3",
-    "vue": "^3.3.4",
+    "vue": "^3.3.9",
     "vue-router": "4.2.4"
   },
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.61",
     "@types/dat.gui": "^0.7.10",
     "@types/gsap": "^3.0.0",
-    "@types/node": "^20.6.0",
-    "@types/three": "^0.157.0",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@types/node": "^20.10.0",
+    "@types/three": "^0.158.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.66.1",
-    "typescript": "^5.2.2",
-    "unocss": "^0.55.7",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.9",
-    "vite-plugin-glsl": "^1.1.2",
-    "vite-plugin-restart": "^0.3.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unicorn": "^49.0.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "prettier": "^3.1.0",
+    "rollup-plugin-visualizer": "^5.9.3",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.2",
+    "unocss": "^0.57.7",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^5.0.2",
+    "vite-plugin-glsl": "^1.2.0",
+    "vite-plugin-restart": "^0.4.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-ts": "^1.0.11"
   }
